# django-imgproxy

./: LICENSE  pyproject.toml
.github/workflows/: publish.yaml
src/django_imgproxy/: __init__.py  builder.py  fields.py  settings.py
src/django_imgproxy/templatetags/: imgproxy.py
