[project]
name = "django-imgproxy"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
]
authors = [
    {name = "anime.com.br", email = "opensource@anime.com.br"}
]
description = "Build imgproxy URLs for your Django templates"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["django", "imgproxy"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 6",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Source = "https://github.com/animebr/django-imgproxy"
Discord = "https://anime.com.br/discord"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
